--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Bootstrap Portfolio</title>
+        <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+        <link rel="stylesheet" href="assets/css/style.css">
 
     </head>
 
@@ -50,6 +52,10 @@
             </div>
 
 
+        </div>
+
+        <div class="footerBgc">
+                <footer class="footer text-center"> Copyright &copy;</footer>
         </div>
 
 
