--- a/portfolio.html
+++ b/portfolio.html
@@ -1,9 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Bootstrap Portfolio</title>
+        <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-        
+        <link rel="stylesheet" href="assets/css/style.css">
+
     </head>
+    <header>
+        <section class = "content">
+            <div id="namebanner">
+                <h1>Matthew Sadecki</h1>
+            </div>
+        </section>
+    </header>
+
+    <div class="jumbotron">
+        <h2>Portfolio</h2>
+        <div class="container">
+            <img class="img-fluid float-left" style="height: 160px; width: 260px;" src="assets/images/pic1.jpg">
+            <img class="img-fluid float-left" style="height: 160px; width: 260px;" src="assets/images/pic2.jpg">
+
+        </div>
+
+        <div class="container">
+                <img class="img-fluid float-left" style="height: 160px; width: 260px;" src="assets/images/pic3.jpg">
+                <img class="img-fluid float-left" style="height: 160px; width: 260px;" src="assets/images/pic4.jpg">
+
+        </div>
+
+        <div class="container">
+                <img class="img-fluid float-left" style="height: 160px; width: 260px;" src="assets/images/pic5.jpg">
+                <img class="img-fluid float-left" style="height: 160px; width: 260px;" src="assets/images/pic6.jpg">
+
+        </div>
+
+
+
+
+    </div>
+
+
+    <div class="footerBgc">
+        <footer class="footer text-center"> Copyright &copy;</footer>
+    </div>
     
 </html>
